# AdbClient

./: .gitmodules  CMakeLists.txt  README.md  main.cpp
doc/: class_graph.md
include/: AdbCommand.h  DeviceInfo.h  HostCommand.h  HostSerialCommand.h  LocalCommand.h  Protocol.h  adb_command.h  adb_protocol.h  host_command.h  host_serial_command.h  local_command.h  utils.h
include/android/: stringprintf.h
src/: AdbCommand.cpp  DeviceInfo.cpp  HostCommand.cpp  HostSerialCommand.cpp  LocalCommand.cpp  adb_command.cpp  adb_protocol.cpp  device_info.cpp  host_command.cpp  host_serial_command.cpp  local_command.cpp  protocol.cpp  utils.cpp
src/android/: stringprintf.cpp
unittest/: CMakeLists.txt  hello_test.cpp
